# ai-influencer-

./: .env.local  .gitignore  README.md
backend/: ai_influencer.db  pyproject.toml  requirements.txt  verify_graphics.py
backend/app/: main.py
backend/app/agents/: fact_check_crew.py  news_crew.py  political_crew.py
backend/app/core/: config.py
backend/app/db/: models.py
backend/app/services/: social_media.py
backend/app/utils/: graphics.py
frontend/: package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: fact-check-card.tsx  publish-button.tsx
frontend/components/ui/: badge.tsx
frontend/lib/: api.ts
frontend/types/: index.ts
