[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.18.4",
    "crewai-tools>=1.14.2",
    "crewai[litellm,openai,tools]>=1.14.2",
    "facebook-sdk>=3.1.0",
    "fastapi[all]>=0.136.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.0",
    "mcp[cli]>=1.26.0",
    "pillow>=12.2.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "tweepy>=4.16.0",
]
